# cppstarter

./: CMakeLists.txt  LICENSE  README.md
contrib/: CMakeLists.txt
include/: Class.hpp
src/: Class.cpp
test/: TestStarter.cpp
